--- a/dbt/pyproject.toml
+++ b/dbt/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 authors = [
     { name = "zakuro0w0", email = "tatatake0w0@gmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "dbt-core>=1.8.4",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
